Update to support flattening nested structs.
Signed-off-by: currantw <taylor.curran@improving.com>