@@ -5,18 +5,14 @@
 
 package org.opensearch.sql.planner.physical;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.allOf;
-import static org.hamcrest.Matchers.hasItems;
-import static org.hamcrest.Matchers.iterableWithSize;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.when;
 import static org.opensearch.sql.data.type.ExprCoreType.STRUCT;
 import static org.opensearch.sql.planner.physical.PhysicalPlanDSL.flatten;
 
-import com.google.common.collect.ImmutableMap;
-import java.util.List;
 import java.util.Map;
 import lombok.ToString;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayNameGeneration;
 import org.junit.jupiter.api.DisplayNameGenerator;
 import org.junit.jupiter.api.Test;
@@ -33,40 +29,71 @@ import org.opensearch.sql.expression.DSL;
 class FlattenOperatorTest extends PhysicalPlanTestBase {
   @Mock private PhysicalPlan inputPlan;
 
-  @Test
-  void testFlattenStructEmpty() {
-    Map<String, Object> structMap = ImmutableMap.of();
-    Map<String, Object> rowMap = ImmutableMap.of("struct_field", structMap);
-    ExprValue rowValue = ExprValueUtils.tupleValue(rowMap);
+  @BeforeEach
+  void setup() {
+    ExprValue rowValue =
+        ExprValueUtils.tupleValue(
+            Map.ofEntries(
+                Map.entry("struct_empty", Map.of()),
+                Map.entry(
+                    "struct",
+                    Map.ofEntries(
+                        Map.entry("integer", 0),
+                        Map.entry("double", 0),
+                        Map.entry("struct_nested", Map.of("string", "value"))))));
 
     when(inputPlan.hasNext()).thenReturn(true, false);
     when(inputPlan.next()).thenReturn(rowValue);
-
-    PhysicalPlan plan = flatten(inputPlan, DSL.ref("struct_field", STRUCT));
-
-    assertThat(execute(plan), allOf(iterableWithSize(1), hasItems()));
   }
 
   @Test
-  void testFlattenStructBasic() {
-    Map<String, Object> structMap =
-        ImmutableMap.ofEntries(
-            Map.entry("string_field", "string_value"),
-            Map.entry("integer_field", 1),
-            Map.entry("long_field", 1L),
-            Map.entry("boolean_field", true),
-            Map.entry("list_field", List.of("a", "b")));
+  void testStructEmpty() {
+    ExprValue actual = execute(flatten(inputPlan, DSL.ref("struct_empty", STRUCT))).getFirst();
 
-    Map<String, Object> rowMap = ImmutableMap.of("struct_field", structMap);
-    ExprValue rowValue = ExprValueUtils.tupleValue(rowMap);
+    ExprValue expected =
+        ExprValueUtils.tupleValue(
+            Map.ofEntries(
+                Map.entry(
+                    "struct",
+                    Map.ofEntries(
+                        Map.entry("integer", 0),
+                        Map.entry("double", 0),
+                        Map.entry("struct_nested", Map.of("string", "value"))))));
 
-    ExprValue expectedRowValue = ExprValueUtils.tupleValue(structMap);
+    assertEquals(expected, actual);
+  }
 
-    when(inputPlan.hasNext()).thenReturn(true, false);
-    when(inputPlan.next()).thenReturn(rowValue);
+  @Test
+  void testStruct() {
+    ExprValue actual = execute(flatten(inputPlan, DSL.ref("struct", STRUCT))).getFirst();
 
-    PhysicalPlan plan = flatten(inputPlan, DSL.ref("struct_field", STRUCT));
+    ExprValue expected =
+        ExprValueUtils.tupleValue(
+            Map.ofEntries(
+                Map.entry("struct_empty", Map.of()),
+                Map.entry("integer", 0),
+                Map.entry("double", 0),
+                Map.entry("struct_nested", Map.of("string", "value"))));
 
-    assertThat(execute(plan), allOf(iterableWithSize(1), hasItems(expectedRowValue)));
+    assertEquals(expected, actual);
+  }
+
+  @Test
+  void testStructNested() {
+    ExprValue actual =
+        execute(flatten(inputPlan, DSL.ref("struct.struct_nested", STRUCT))).getFirst();
+
+    ExprValue expected =
+        ExprValueUtils.tupleValue(
+            Map.ofEntries(
+                Map.entry("struct_empty", Map.of()),
+                Map.entry(
+                    "struct",
+                    Map.ofEntries(
+                        Map.entry("integer", 0),
+                        Map.entry("double", 0),
+                        Map.entry("string", "value")))));
+
+    assertEquals(expected, actual);
   }
 }
